<?xml version="1.0"?>
<package format="2">
  <name>slamware_sdk</name>
  <version>5.1.0</version>
  <description>The slamware_sdk package</description>

  <maintainer email="ros@slamtec.com">Slamtec Ros Maintainer</maintainer>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
</package>
